# ai-genai-rag

./: .env.example  .gitignore  =0.2.2  README.md  pyproject.toml
config/: logging.yaml  settings.dev.yaml  settings.prod.yaml  settings.yaml
sample_data/: README.md
sample_data/sample_articles/: article_1.txt  article_2.txt
src/rag_pipeline/: __init__.py  main.py
src/rag_pipeline/config/: __init__.py  logging_config.py  settings_loader.py
src/rag_pipeline/generation/: __init__.py  prompt_builder.py  response_generator.py  template_engine.py
src/rag_pipeline/ingestion/: __init__.py  document_loader.py  embedding_generator.py  ingestion_pipeline.py  text_chunker.py
src/rag_pipeline/models/: __init__.py  chunk.py  document.py  pipeline_config.py  query_result.py
src/rag_pipeline/query/: __init__.py  bm25_retriever.py  hybrid_retriever.py  query_pipeline.py  query_processor.py  reranker.py  retriever.py
src/rag_pipeline/security/: __init__.py  input_sanitizer.py  secrets_manager.py
src/rag_pipeline/utils/: __init__.py  exceptions.py  metrics.py  text_utils.py
tests/: __init__.py  conftest.py
tests/fixtures/: sample_config.yaml  sample_document.txt
tests/integration/: __init__.py  test_ingestion_pipeline.py  test_query_pipeline.py
tests/unit/: __init__.py  test_document_loader.py  test_embedding_generator.py  test_input_sanitizer.py  test_query_processor.py  test_reranker.py  test_response_generator.py  test_retriever.py  test_settings_loader.py  test_text_chunker.py  test_text_utils.py  test_vector_store_manager.py
(+2 files in other folders)
