[project]
name = "ai-genai-rag"
version = "1.0.0"
description = "Educational RAG (Retrieval Augmented Generation) pipeline implementation in Python"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [
    {name = "Developer", email = "developer@example.com"},
]
dependencies = [
    "chromadb>=0.5.23",
    "sentence-transformers>=3.4.1",
    "pyyaml>=6.0.2",
    "python-dotenv>=1.0.1",
    "pypdf>=5.1.0",
    "rank-bm25>=0.2.2",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.4",
    "pytest-cov>=6.0.0",
    "pytest-mock>=3.14.0",
    "ruff>=0.8.6",
    "mypy>=1.14.1",
    "pre-commit>=4.0.1",
]

[project.scripts]
rag-pipeline = "rag_pipeline.main:main"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "S", "B", "A", "C4", "PT"]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["S101"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--cov=src/rag_pipeline --cov-report=term-missing --cov-report=html"

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_configs = true

[build-system]
requires = ["setuptools>=75.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
